fix project type icon alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,5 +207,5 @@ r-tender-item-group .border-left {
 .kind-ico{
   height: 72px;
   width: auto;
-  margin: -24px -12px;
+  margin: -30px 0;
 }
